Fix some css alignment
Left-aligned images will now scale and position themselves correctly when viewed on mobile devices. Fix still required to restore proper order.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3170,6 +3170,15 @@
 					margin-bottom: 2em;
 				}
 
+				.spotlight .image.leftimage {
+					-moz-flex: 0 1 auto;
+					-webkit-flex: 0 1 auto;
+					-ms-flex: 0 1 auto;
+					flex: 0 1 auto;
+					margin-right: 0;
+					margin-bottom: 2em;
+				}
+
 		}
 
 		@media screen and (max-width: 736px) {
@@ -3179,6 +3188,14 @@
 			}
 
 				.spotlight .image img {
+					width: 12em;
+				}
+
+			.spotlight .image.leftimage {
+				padding: 0.35em;
+			}
+
+				.spotlight .image.leftimage img {
 					width: 12em;
 				}
 
